# Blimpt

./: .gitignore  README.md  components.json  config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
actions/: messageHandler.ts
ai/perplexica/: search.ts
ai/prompts/: redditSearch.ts  webSearch.ts
ai/providers/: gemini.ts  (+1 more)
components/: ChatIndicator.tsx  ClipboardIndicator.tsx  Copy.tsx  DragHandle.tsx  ExpandIndicator.tsx  HideButton.tsx  HistoryIndicator.tsx  Rewrite.tsx  SettingsIndicator.tsx  WebSearchIndicator.tsx  screenshot.tsx  shortcut-item.tsx  shortcut.tsx  themeIndicator.tsx
db/: api.ts  database.ts
hooks/: use-invert-scroll.ts  use-messages-query.ts  use-paginated-messages.ts  use-shortcut-editor.ts
lib/: index.ts  keyboard.ts  requestNoSearch.ts  searxng.ts  trimHistory.ts
perplexica/: search.ts
prompts/: wolframAlpha.ts  youtubeSearch.ts
providers/: chat-provider.tsx  config-provider.tsx  query-provider.tsx
search/: metaSearchAgent.ts
src/: App.css  App.tsx  ScreenshotWindow.tsx  SecondWindow.tsx  chat.tsx  command-list.tsx  docker-installation-setup.tsx  main.tsx  samplemessages.ts  sidebar.tsx
src-tauri/: Cargo.toml  db.sqlite  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/searxng/: settings.yml
src-tauri/src/: db-old.rs  helper.rs  lib.rs  main.rs  screenshot.rs  shortcut.rs
types/: Message.ts  attachment.ts  clipboard.ts  drawing.ts  shortcut.ts
utils/: computeSimilarity.ts  constants.ts  formatHistory.ts
(+44 files in other folders)
