[package]
name = "quick-gpt-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quick_gpt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.0.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[build-dependencies]
tauri-build = { version = "2", features = [ ] }
[dependencies.windows]
version = "0.36.1"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
tauri = { version = "2", features = [ "tray-icon" ]}
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

